# image_classification

./: .gitignore  README.md  data_setup.py  download_data.py  engine.py  model_builder.py  pyproject.toml  train.py  utils.py  venv.sh
